# overview-wind-turbine

./: .gitignore  data_tools.py  main.py  pyproject.toml  requirements.txt
pages/: data-view.py  home.py
