[project]
name = "streamlit-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Anderson Ivanildo",email = "andersonivanildo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.48.1,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
